--- a/templates/publicacion_gaceta.html
+++ b/templates/publicacion_gaceta.html
@@ -1,38 +1,49 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block content %}
+<style>.embed-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+}
+.embed-container iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}</style>
 
 
-
-    <section class="double-content section-top-space" style="margin-bottom: 10%">
+    <section class="double-content section-top-space" >
 
         <div class="center">
 
             <div class="green-line">
             </div>
 
-            <div class="content-left">
+            <div class="content-left embed-container">
 
-                <h2>Publicación del Diario Oficial La Gaceta, en la cual se aprueba la LNME</h2>
-
-                <p>Etiam elit elit, commodo at interdum sed. Cras accumsan dignissim neque et pulvinar. In finibus vitae tellus at scelerisque. Etiam facilisis purus nec sem ultricies commodo.</p>
-                <p class="without-margin-bottom">Etiam id ante est. Aenean pellentesque quam vel purus tincidunt tristique. Integer arcu nibh, tempus id ultricies ut, vulputate nec nunc.</p>
-
+<iframe class="responsive" src="{% static 'archivo/LA GACETA 29.12.2018 (ACUERDO LNME 2018).pdf' %}"
+style="" frameborder="0"></iframe>
             </div>
 
             <div class="content-right">
 
+                <h2>Publicación del Diario Oficial La Gaceta, en la cual se aprueba la LNME</h2>
                 <ul class="documents without-margin-bottom">
 
                     <li class="document document-pdf">
-
+{% for item in lista_gaceta %}
                         <i class="fa fa-file-pdf-o"></i>
-                        <a href="{% static 'archivo/LA GACETA 29.12.2018 (ACUERDO LNME 2018).pdf' %}">Publicación del Diario Oficial La Gaceta, en la cual se aprueba la LNME</a>
+
+                        <a href="/archivo/{{ item.archivo }}">Publicación del Diario Oficial La Gaceta, en la cual se aprueba la LNME</a>
                         <span>Tamaño: 3.7 MB</span>
 
                         <div class="clear">
                         </div>
-
+{% endfor %}
                     </li>
 
 
