--- a/templates/contenido.html
+++ b/templates/contenido.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 {% block content %}
     <div id="loader">
 
@@ -7,8 +8,6 @@
 
     </div>
 
-
-    
     <section class="blog section-top-space">
     
         <i class="fa fa-newspaper-o background-icon"></i>
