--- a/templates/acuerdo.html
+++ b/templates/acuerdo.html
@@ -1,27 +1,41 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block content %}
+<style>
+
+        .embed-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+}
+.embed-container iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+</style>
 
 
-
-    <section class="double-content section-top-space" style="margin-bottom: 10%">
+    <section class="double-content section-top-space" >
 
         <div class="center">
 
             <div class="green-line">
             </div>
 
-            <div class="content-left">
+            <div class="content-left embed-container">
 
-                <h2>ACUERDO LNME 5952-2018</h2>
 
-                <p>Etiam elit elit, commodo at interdum sed. Cras accumsan dignissim neque et pulvinar. In finibus vitae tellus at scelerisque. Etiam facilisis purus nec sem ultricies commodo.</p>
-                <p class="without-margin-bottom">Etiam id ante est. Aenean pellentesque quam vel purus tincidunt tristique. Integer arcu nibh, tempus id ultricies ut, vulputate nec nunc.</p>
-
+          <iframe src="{% static 'archivo/ACUERDO LNME 5952-2018 .PDF' %}"
+style=" height:400px;" frameborder="0"></iframe>
             </div>
 
             <div class="content-right">
 
+                <h2>ACUERDO LNME 5952-2018</h2>
                 <ul class="documents without-margin-bottom">
 
                     <li class="document document-pdf">
