--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
 
     <title>LISTADO NACIONAL DE MEDICAMENTOS ESENCIALES</title>
 
+<link rel="icon" type="image/png" href="{% static '_img/favicon.png' %}">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -19,15 +20,19 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.5.6/css/buttons.dataTables.min.css" />
 </head>
 <body>
+
+
     <header>
+        <div  style="margin-right: 30%;margin-left: 30%">
+     <a href="/" ><img class="responsive"  height="60" src="{% static 'imagenes/logo_paho.png' %}" alt="logo" /></a>
+
+</div>
+
+
 
         <div style="margin-left: 2%;margin-right: 5%;">
 
-            <div class="logo">
 
-                <a href="/"><img  height="40" src="{% static 'imagenes/logo_paho.png' %}" alt="logo" /></a>
-
-            </div>
 
             <nav>
 
@@ -96,17 +101,59 @@
 
     <footer>
 
-        <div class="center">
+        <div  >
 
             <div class="green-line">
             </div>
 
+            <nav style="margin-left: 5%;">
+<h1>Otros Links</h1>
+                <br>
+                <ul class="left">
+
+                    <li>
+
+                        <h4><a href="https://www.paho.org/hq/index.php?lang=en" style="color: #060162;">OPS</a></h4>
+                        <ul class="sub">
+
+                                                       <li ><a style="color: white" href="https://www.facebook.com/OPS-Honduras-PAHO-Honduras-157522440950103/" target="_blank">Facebook</a></li>
+ <li ><a style="color: white" href="https://twitter.com/pahowho?lang=es"  target="_blank">Twitter</a></li>
+
+                        </ul>
+
+                    </li>
+
+                    <li>
+
+                        <h4><a href="http://www.salud.gob.hn/site/" style="color: #060162">SESAL</a></h4>
+                        <ul class="sub">
+
+                               <li ><a style="color: white" href="https://www.facebook.com/saludhn/" target="_blank" >Facebook</a></li>
+ <li ><a style="color: white" href="https://twitter.com/saludhn?lang=es" target="_blank">Twitter</a></li>
 
 
-           <p class="">Todos los derechos reservados 2019</p>
+                        </ul>
+
+                    </li>
+
+
+
+                </ul>
+
+            </nav>
+
+            <ul class="right">
+
+                <li style="color: white; margin-right: 5%;">Copyright © Todos los derechos reservados,2019.</li>
+
+            </ul>
 
             <div class="clear">
             </div>
+
+        </div>
+
+
 
         </div>
 
@@ -147,7 +194,9 @@
         responsive: true,
         dom: 'Bfrtip',
         buttons: [
-             'excel', 'pdf', 'print'
+            {  extend: 'pdfHtml5',
+                orientation: 'landscape',
+                pageSize: 'LEGAL'}
         ],
         language: {
         search: "Filtrar:",
