--- a/templates/index.html
+++ b/templates/index.html
@@ -19,56 +19,37 @@
     
         <div class="heading-slides">
         
-            <div class="heading-slide-single" data-slide-id="1" style="background-image: url( '{% static '_img/image.png' %}' );">
+            <div class="heading-slide-single" data-slide-id="1" style="background-image: url( '{% static '_img/shutterstock_495868924.jpg' %}' );">
             
-                <div class="flying-1">
-                
-                    <span>TITULO1</span>
-                
-                </div>
-                
-                <div class="flying-2">
-                
-                    <h3>TITULO2<br /> ...</h3>
-                    <p>Curabitur iaculis ante a nibh vulputate sollicitudin.</p>
-                    
 
                 
-                </div>
+
                 
                 <div class="heading-content">
                     
-                    <h2>Insurances do matter</h2>
-                    <h3>Lorem ipsum dolor sit<br /> amet, consectetur.</h3>
+                    <h2>Listado Nacional de Medicamentos Esenciales</h2>
+                    <h3>Disponible en Google Play Store y<br /> AppStore</h3>
                     
                     <button class="button button-navy-blue "  >Descargar <i class="fa fa-android"></i></button>
-        
+         <button class="button button-navy-blue "  >Descargar <i class="fa fa-apple"></i></button>
                 </div>
             
             </div>
             
-            <div class="heading-slide-single" data-slide-id="2" style="background-image: url( '_assets/_img/image.png' );">
+            <div class="heading-slide-single" data-slide-id="2" style="background-image: url( '{% static '_img/shutterstock_685642123.jpg' %}' );">
             
-                <div class="flying-1">
-                
-                    <span>TITULO1</span>
-                
-                </div>
-                
-                <div class="flying-2">
-                
-                    <h3>TITULO2<br /> ...</h3>
-                    <p>Curabitur iaculis ante a nibh vulputate sollicitudin.</p>
-                    
 
-                </div>
+
                 
-                <div class="heading-content">
+                <div class="heading-content" style="color: white">
                     
-                    <h2>Insurances do matter</h2>
-                    <h3>Lorem ipsum dolor sit<br /> amet, consectetur.</h3>
-                  <button class="button button-navy-blue "  >Descargar <i class="fa fa-apple"></i></button>
-        
+                    <h2  style="color: white">Busca la aplicación en Play Store y AppStore</h2>
+  <h3 style="color: white">Disponible en Google Play Store y<br /> AppStore</h3>
+
+                    <button class="button " style="color: white;" >Descargar <i class="fa fa-android"></i></button>
+         <button class="button  " style="color: white;" >Descargar <i class="fa fa-apple"></i></button>
+                </div>
+
                 </div>
             
             </div>
@@ -78,8 +59,24 @@
     </div>
     
 
-    
-    <section class="insurances-slider section">
+    <section class="section" style="">
+
+        <div class="content center  " style="margin-top: 5%;margin-bottom: 5%">
+
+
+              <div class="content-tab-single  top">
+                  <h2 style="text-align: center;color: #2C3459">Listado Nacional de Medicamentos Esenciales</h2>
+                  <br>
+                  <p class="aligned">El Listado Nacional de Medicamentos Esenciales (LNME) de la Secretaría de Salud, cuenta con 531 presentaciones farmacéuticas equivalentes a 376 principios activos. El proceso de selección y análisis crítico de cada medicamento fue evaluado por un grupo multidisciplinario de profesionales sanitarios, cada decisión ha sido fundamentada a través de informes técnicos con la mejor evidencia científica disponible y de manera consensuada entre todos los profesionales involucrados.</p>
+             <br>
+              <p>Con él LNME, se pretender disminuir las barreras de acceso y asegurar el uso racional de los mismos, contribuir al compromiso del país de transitar hacia un sistema sanitario con acceso y cobertura universal en salud, así como al cumplimiento de los Objetivos de Desarrollo Sostenible, en su objetivo 3 de Salud y Bienestar. </p>
+              <br>
+                  <p>Adicionalmente, el Listado Nacional de Medicamentos Esenciales responde a lo planteado por la Secretaría de Salud, en su Plan Nacional de Salud, específicamente en el componente estratégico de Regulación del Sistema Nacional de Salud en su línea de acción del Diseño del Programa de Medicina Segura cuya meta es garantizar el acceso universal y oportuno a medicamentos esenciales de calidad. </p>
+
+              </div>
+        </div>
+    </section>
+    <section class="insurances-slider section" style="background-color: #9498ab; color: white;">
 
         <div class="center">
 
@@ -108,7 +105,7 @@
                 <h2>
 ¡Descarga la aplicación ahora!
 </h2>
-                  <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</p>
+                  <p style="color: white;">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</p>
 
 
 
@@ -133,31 +130,18 @@
     
         <div class="center">
         
-            <i class="fa fa-institution background-icon"></i>
-            <div class="contact-details">
-
-                <div class="contact-detail-single">
-                
-
-                <img class="responsive" height="" src="{% static 'imagenes/logo_pie_pagina.png' %}">
-                     
-                </div>
-
-                <div class="contact-detail-single">
-                
-
-                <img class="responsive" src="{% static 'imagenes/logo_pie_pagina.png' %}">
-
-                </div>
-                <div class="contact-detail-single contact-detail-single-last">
-                        <img class="responsive" src="{% static 'imagenes/logo_pie_pagina.png' %}">
-                </div>
+            <i class=""></i>
 
 
-            
-            </div>
 
-        </div>
+
+                <img class="responsive" src="{% static '_img/Sin título-2.png' %}">
+
+</div>
+
+
+
+
     
     </section>
 {% endblock %}
