--- a/templates/listado_nacional_medicamentos.html
+++ b/templates/listado_nacional_medicamentos.html
@@ -28,8 +28,8 @@ tr:nth-child(even){background-color: #f2f2f2}
 <section class="content section-top-space section-gray" style="overflow-x:auto;">
 
 
-<section style="background-color: #ffffff;">
-<table id="example" class="table table-bordered table-hover nowrap single-top"  style="background-color: #cccccc;">
+<section >
+<table id="example" class="display" style="width:100%">
         <thead>
             <tr>
                 <th>No</th>
