--- a/templates/base.html
+++ b/templates/base.html
@@ -65,20 +65,7 @@
                     </li>
 <!--OTROS ENLACES-->
 
- <li>
-
-                        <a href="#">Otros Enlaces</a>
-                        <i class="fa fa-caret-down"></i>
-
-                        <ul class="submenu animated speed fadeInDown">
-
-                            <li><a href="/acuerdo/">Acuerdo Ministerial de aprobación del LNME </a></li>
-                            <li><a href="/publicacion_gaceta/">Publicación del Diario Oficial La Gaceta, en la cual se aprueba la LNME. </a></li>
-
-
-                        </ul>
-
-                    </li>
+ <li><a href="/archivos/">Archivos</a></li>
                 </ul>
 
                 <div class="menu-responsive"><i class="fa fa-bars"></i></div>
@@ -110,7 +97,18 @@
 <h1>Otros Links</h1>
                 <br>
                 <ul class="left">
+                   <li>
 
+                        <h4><a href="http://www.salud.gob.hn/site/" style="color: #060162">Secretaría de Salud</a></h4>
+                        <ul class="sub">
+
+                               <li ><a style="color: white" href="https://www.facebook.com/saludhn/" target="_blank" >Facebook</a></li>
+ <li ><a style="color: white" href="https://twitter.com/saludhn?lang=es" target="_blank">Twitter</a></li>
+
+
+                        </ul>
+
+                    </li>
                     <li>
 
                         <h4><a href="https://www.paho.org/hq/index.php?lang=en" style="color: #060162;">OPS</a></h4>
@@ -123,18 +121,7 @@
 
                     </li>
 
-                    <li>
 
-                        <h4><a href="http://www.salud.gob.hn/site/" style="color: #060162">SESAL</a></h4>
-                        <ul class="sub">
-
-                               <li ><a style="color: white" href="https://www.facebook.com/saludhn/" target="_blank" >Facebook</a></li>
- <li ><a style="color: white" href="https://twitter.com/saludhn?lang=es" target="_blank">Twitter</a></li>
-
-
-                        </ul>
-
-                    </li>
 
 
 
