--- a/templates/base.html
+++ b/templates/base.html
@@ -178,7 +178,28 @@
 
 
     <script>$(document).ready(function() {
-    $('#example').DataTable( {
+// Setup - add a text input to each footer cell
+$('#example thead tr').clone(true).appendTo( '#example thead' );
+$('#example thead tr:eq(1) th').each( function (i) {
+    var title = $(this).text();
+    $(this).html( '<input type="text" placeholder="Filtrar '+title+'" />' );
+
+    $( 'input', this ).on( 'keyup change', function () {
+        if ( table.column(i).search() !== this.value ) {
+            table
+                .column(i)
+                .search( this.value )
+                .draw();
+        }
+    } );
+} );
+
+
+var table = $('#example').DataTable( {
+
+            orderCellsTop: true,
+    fixedHeader: true,
+
         responsive: true,
         dom: 'Bfrtip',
         buttons: [
@@ -207,6 +228,7 @@
 
 
 } );
+
     </script>
 
 </body>
