--- a/templates/archivos.html
+++ b/templates/archivos.html
@@ -32,7 +32,7 @@
 {% for item in lista_gaceta %}
                         <i class="fa fa-file-pdf-o"></i>
 
-                        <a href="/archivo/{{ item.archivo}}">Publicación del Diario Oficial La Gaceta, en la cual se aprueba la LNME</a>
+                        <a href="/media/{{ item.archivo}}">Publicación del Diario Oficial La Gaceta, en la cual se aprueba la LNME</a>
                         <span id="mb"></span>
 
     <script>
