--- a/templates/archivos.html
+++ b/templates/archivos.html
@@ -34,14 +34,14 @@
 
                         <a href="/media/{{ item.archivo}}">{{item.nombre_del_archivo}}</a>
 
-                        <span id="mb"></span>
+                        <span id="mb{{ item.id }}"></span>
     <br>
     <br>
 
     <script>
 var mb=Math.round({{ item.archivo.size}}/1048576) ;
 var tam="Tamaño";
-document.getElementById('mb').innerHTML = tam+" "+mb+" MB";
+document.getElementById('mb{{ item.id }}').innerHTML = tam+" "+mb+" MB";
 </script>
                         <div class="clear">
                         </div>
