--- a/templates/index.html
+++ b/templates/index.html
@@ -89,11 +89,8 @@
             <div class="images">
 
 
-             <img  class="responsive" src="{% static 'imagenes/playstore.png' %}" alt="logo" />
-                  <img  class="responsive" src="{% static 'imagenes/appstore.png' %}" alt="logo" />
-
-
-
+             <img   src="{% static 'imagenes/playstore.png' %}" alt="logo" />
+                  <img  src="{% static 'imagenes/appstore.png' %}" alt="logo" />
 
             </div>
 
@@ -105,8 +102,11 @@
                 <h2>
 ¡Descarga la aplicación ahora!
 </h2>
-                  <p style="color: white;">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</p>
+                  <p style="color: white;">
+                      Descarga la aplicación desde las tiendas AppStore y PlayStore, sigue los links o encuentra la aplicación como listado nacional de medicamentos hn.
+La aplicación es totalmente gratis, no necesitas registrarte ni pagar por una suscripción.
 
+                  </p>
 
 
                 </div>
@@ -135,7 +135,7 @@
 
 
 
-                <img class="responsive" src="{% static '_img/Sin título-2.png' %}">
+                <img class="responsive" src="{% static '_img/Sin título-3.png' %}">
 
 </div>
 
