miercoles sin nadie

--- a/templates/index.html
+++ b/templates/index.html
@@ -135,7 +135,7 @@ La aplicación es totalmente gratis, no necesitas registrarte ni pagar por una s
 
 
 
-                <img class="responsive" src="{% static '_img/Sin título-3.png' %}">
+                <img class="responsive" src="{% static '_img/logo_portada_sesal.png' %}">
 
 </div>
 
