miercoles sin nadie

--- a/templates/listado_nacional_medicamentos.html
+++ b/templates/listado_nacional_medicamentos.html
@@ -35,7 +35,7 @@ tr:nth-child(even){background-color: #f2f2f2}
                 <th>No</th>
                   <th>Nombre del Medicamento</th>
                 <th>Código ATC</th>
-                <th>Categoria</th>
+                <th>Categoría</th>
                 <th>SubCategoria</th>
 
                 <th>Concentración </th>
@@ -101,7 +101,7 @@ tr:nth-child(even){background-color: #f2f2f2}
               <th>No</th>
                      <th>Nombre del Medicamento</th>
                 <th>Código ATC</th>
-                <th>Categoria</th>
+                <th>Categoría</th>
                 <th>SubCategoria</th>
 
                 <th>Concentración </th>
