--- a/templates/lnm_detalle.html
+++ b/templates/lnm_detalle.html
@@ -33,10 +33,11 @@ tr:nth-child(even){background-color: #f2f2f2}
         <thead>
             <tr>
                 <th>No</th>
+                     <th>Nombre del Medicamento</th>
                 <th>Código ATC</th>
-                <th>Categoria</th>
+                <th>Categoría</th>
                 <th>SubCategoria</th>
-                <th>Nombre del Medicamento</th>
+
                 <th>Concentración </th>
                 <th>Forma Farmacéutica</th>
                 <th>Vía de Administración</th>
@@ -53,10 +54,11 @@ tr:nth-child(even){background-color: #f2f2f2}
 
             <tr>
                 <td>{{item.id}}</td>
+                 <td>{{item.nombre_medicamento}}</td>
                 <td>{{item.codigo_atc}}</td>
             <td>{{ item.categoria }}</td>
             <td>{{ item.sub_categoria }}</td>
-                <td>{{item.nombre_medicamento}}</td>
+
 
                 <td>{{item.contentracion}}</td>
                 <td>{{item.forma_farmaceutica}}</td>
@@ -97,10 +99,11 @@ tr:nth-child(even){background-color: #f2f2f2}
         <tfoot>
             <tr>
               <th>No</th>
+                    <th>Nombre del Medicamento</th>
                 <th>Código ATC</th>
-                <th>Categoria</th>
+                <th>Categoría</th>
                 <th>SubCategoria</th>
-                <th>Nombre del Medicamento</th>
+
                 <th>Concentración </th>
                 <th>Forma Farmacéutica</th>
                 <th>Vía de Administración</th>
