miercoles sin nadie

--- a/templates/lnm2.html
+++ b/templates/lnm2.html
@@ -34,7 +34,7 @@ tr:nth-child(even){background-color: #f2f2f2}
             <tr>
                 <th>No</th>
 
-                <th>Categoria</th>
+                <th>Categoría</th>
  <th>Ver Medicamentos</th>
             </tr>
         </thead>
@@ -49,7 +49,7 @@ tr:nth-child(even){background-color: #f2f2f2}
 
             <td>{{ item.nombre_categoria }}</td>
 
-<td><a href="{% url 'lnm_detalle'  %}?id_categoria={{ item.id }}">ver</a></td>
+<td><a href="{% url 'lnm_detalle'  %}?id_categoria={{ item.id }}">Ver los medicamentos de esta categoría</a></td>
 
 
 
