--- a/templates/lnm_detalle.html
+++ b/templates/lnm_detalle.html
@@ -36,7 +36,7 @@ tr:nth-child(even){background-color: #f2f2f2}
                      <th>Nombre del Medicamento</th>
                 <th>Código ATC</th>
                 <th>Categoría</th>
-                <th>SubCategoria</th>
+                <th>SubCategoría</th>
 
                 <th>Concentración </th>
                 <th>Forma Farmacéutica</th>
@@ -102,7 +102,7 @@ tr:nth-child(even){background-color: #f2f2f2}
                     <th>Nombre del Medicamento</th>
                 <th>Código ATC</th>
                 <th>Categoría</th>
-                <th>SubCategoria</th>
+                <th>SubCategoría</th>
 
                 <th>Concentración </th>
                 <th>Forma Farmacéutica</th>
