--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,7 @@
                   <br>
                   <p class="aligned">El Listado Nacional de Medicamentos Esenciales (LNME) de la Secretaría de Salud, cuenta con 531 presentaciones farmacéuticas equivalentes a 376 principios activos. El proceso de selección y análisis crítico de cada medicamento fue evaluado por un grupo multidisciplinario de profesionales sanitarios, cada decisión ha sido fundamentada a través de informes técnicos con la mejor evidencia científica disponible y de manera consensuada entre todos los profesionales involucrados.</p>
              <br>
-              <p>Con él LNME, se pretender disminuir las barreras de acceso y asegurar el uso racional de los mismos, contribuir al compromiso del país de transitar hacia un sistema sanitario con acceso y cobertura universal en salud, así como al cumplimiento de los Objetivos de Desarrollo Sostenible, en su objetivo 3 de Salud y Bienestar. </p>
+              <p>Con el LNME, se pretender disminuir las barreras de acceso y asegurar el uso racional de los mismos, contribuir al compromiso del país de transitar hacia un sistema sanitario con acceso y cobertura universal en salud, así como al cumplimiento de los Objetivos de Desarrollo Sostenible, en su objetivo 3 de Salud y Bienestar. </p>
               <br>
                   <p>Adicionalmente, el Listado Nacional de Medicamentos Esenciales responde a lo planteado por la Secretaría de Salud, en su Plan Nacional de Salud, específicamente en el componente estratégico de Regulación del Sistema Nacional de Salud en su línea de acción del Diseño del Programa de Medicina Segura cuya meta es garantizar el acceso universal y oportuno a medicamentos esenciales de calidad. </p>
 
@@ -103,10 +103,10 @@
 ¡Descarga la aplicación ahora!
 </h2>
                   <p style="color: white;">
-                      Descarga la aplicación desde las tiendas AppStore y PlayStore, sigue los links o encuentra la aplicación como listado nacional de medicamentos hn.
+                      Descarga la aplicación desde las tiendas AppStore y PlayStore, sigue los links o encuentra la aplicación como <span style="font-weight: bold;text-transform: uppercase;">listado nacional de medicamentos hn.</span>
 La aplicación es totalmente gratis, no necesitas registrarte ni pagar por una suscripción.
 
-                  </p>
+                  </>
 
 
                 </div>
