--- a/templates/listado_nacional_medicamentos.html
+++ b/templates/listado_nacional_medicamentos.html
@@ -98,7 +98,7 @@ tr:nth-child(even){background-color: #f2f2f2}
         </tbody>
         <tfoot>
             <tr>
-              <th>No</th>
+              <th id="hola">No</th>
                      <th>Nombre del Medicamento</th>
                 <th>Código ATC</th>
                 <th>Categoría</th>
