--- a/templates/listado_nacional_medicamentos.html
+++ b/templates/listado_nacional_medicamentos.html
@@ -77,7 +77,7 @@ tr:nth-child(even){background-color: #f2f2f2}
                          {% endif %}
                   </td>
             <td>
-                 {% if item.hb == True %}HB,{% endif %}{% if item.hg == True %}HG,{% endif %}{% if item.hesp == True %}HESP,{% endif %}{% if item.inst == True %}INST,{% endif %}{% if item.hpsiq == True %}HPSIQ,{% endif %}
+                 {% if item.hb == True %}HB,{% endif %}{% if item.hg == True %}HG,{% endif %}{% if item.hesp == True %}HESP,{% endif %}{% if item.inst == True %}INST,{% endif %}{% if item.hpsiq == True %}HPSIQ{% endif %}
             </td>
 
             </tr>
