--- a/templates/listado_nacional_medicamentos.html
+++ b/templates/listado_nacional_medicamentos.html
@@ -66,15 +66,7 @@ tr:nth-child(even){background-color: #f2f2f2}
 <td>{{ item.envase_primario }}</td>
 
                      <td>
-                         {% if item.uaps == True %}
-                                    UAPS,
-                         {% endif %}
-                      {% if item.cis == True %}
-                                    CIS,
-                         {% endif %}
-                      {% if item.p == True %}
-                                    P
-                         {% endif %}
+                         {% if item.uaps == True %} UAPS {% endif %}{% if item.cis == True %} CIS {% endif %}{% if item.p == True %} P {% endif %}
                   </td>
             <td>
                  {% if item.hb == True %}HB - {% endif %}{% if item.hg == True %}HG - {% endif %}{% if item.hesp == True %}HESP - {% endif %}{% if item.inst == True %}INST - {% endif %}{% if item.hpsiq == True %}HPSIQ{% endif %}
