--- a/templates/base.html
+++ b/templates/base.html
@@ -47,8 +47,8 @@
                         <i class="fa fa-caret-down"></i>
 
                         <ul class="submenu animated speed fadeInDown">
-                       <li> <a href="/lnme2">Detalle</a></li>
-                               <li>     <a href="/lnme">Todos</a></li>
+                       <li> <a href="/lnme2">Por Categorías</a></li>
+                               <li>     <a href="/lnme">LNME Completo</a></li>
        </ul>
 
                     </li>
