--- a/templates/listado_nacional_medicamentos.html
+++ b/templates/listado_nacional_medicamentos.html
@@ -53,7 +53,7 @@ tr:nth-child(even){background-color: #f2f2f2}
 
 
             <tr>
-                <td>{{item.id}}</td>
+                <td>{{ counter }}</td>
               <td>{{item.codigo_atc}}</td>
                <td title="{{ item.categoria }} / {{ item.sub_categoria }}">{{item.nombre_medicamento}}</td>
 
