--- a/templates/lnm2.html
+++ b/templates/lnm2.html
@@ -45,7 +45,7 @@ tr:nth-child(even){background-color: #f2f2f2}
 
 
             <tr>
-                <td>{{item.id}}</td>
+                <td>{{ forloop.counter}}</td>
 
             <td>{{ item.nombre_categoria }}</td>
 
